--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -60,11 +60,10 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
-}
-
-#logo:hover {
+  &:hover{
   color: #fff;
   text-decoration: none;
+  }
 }
 
 /* footer */
@@ -74,26 +73,21 @@ footer {
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
-}
-
-footer a {
-  color: #555;
-}
-
-footer a:hover {
-  color: #222;
-}
-
-footer small {
+  a {
+	color: #555;
+	&:hover{
+		color: #222;
+	}
+  }
+  small {
   float: left;
-}
-
-footer ul {
-  float: right;
-  list-style: none;
-}
-
-footer ul li {
-  float: left;
-  margin-left: 15px;
+  }
+  ul {
+	float: right;
+	list-style: none;
+	li{
+	float: left;
+	margin-left: 15px;
+	}
+  }
 }
